Wed Jun 27 11:51:29 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/TTSCTest/Sender/Sender.mpc:
        * tests/TTSCTest/TTSConnector/TTSConnector.mpc:
          Fixed link issues on windows. This also fixes afters seen
          on RedHat.

Wed Jun 27 11:23:34 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.h:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/run_test.pl:
          Start the writing upon a publication matched event.

Tue Jun 26 09:32:12 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/HelloTest_Library.xml:
        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/HelloTest_Library.xml:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/USER_QOS_PROFILES.xml:
          Fixed inconsistencies. history depth should be
          less than resources_limits.max_samples_per_instance.

Mon Jun 25 08:00:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
          Log instance handles of any reader/writer/publisher/subscriber
          we create

Mon Jun 25 07:45:38 UTC 2012  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * tests/TTSCTest/Sender/Sender_exec.cpp:
        * tests/TTSConnContext/Sender/Sender_exec.cpp:
        Added missing include

Mon Jun 25 07:21:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
