@@ -14,6 +14,7 @@ module LNE_Test
   component Sender
   {
     port ListenNotEnabledTestConnector::DDS_Write info_write;
+    provides CCM_DDS::ConnectorStatusListener connector_status;
 
     attribute unsigned short keys;
     attribute unsigned short iterations;
