@@ -1,3 +1,11 @@
+Wed Jun 27 12:45:56 UTC 2012  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender.idl:
+        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender_exec.h:
+        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/ListenNotEnabled/descriptors/Plan.cdp:
+          Start the writing of samples upon a publication matched event.
+
 Wed Jun 27 11:51:29 UTC 2012  Marcel Smit  <msmit@remedy.nl>
 
         * tests/TTSCTest/Sender/Sender.mpc:
